--- a/PAGES/01c_vscode/index.html
+++ b/PAGES/01c_vscode/index.html
@@ -2816,15 +2816,15 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Features and Keyboard Shortcuts</h2></p>
-<p>We present keyboard shortcuts and handy features for <a href="https://code.visualstudio.com/">VS Code</a> and its privacy-focused alternative <a href="https://vscodium.com/">VS Codium</a>. Remarkably, these features are largely language-agnostic, holding regardless of the programming language you&#39;re working with. </p>
-<p>The features discussed are accompanied by GIFs for visual illustration. To view these GIFs, simply click &quot;Example&quot;, or alternatively press  <kbd> Alt+🠙</kbd> or  <kbd> Alt+🠛</kbd> to open and close all of them simultaneously.</p>
+<p>We present keyboard shortcuts and handy features for <a href="https://code.visualstudio.com/">VS Code</a>, which also apply to its privacy-focused alternative <a href="https://vscodium.com/">VS Codium</a>. Remarkably, these features are largely language-agnostic, holding regardless of the programming language you&#39;re working with. </p>
+<p>For visual illustration, the features discussed are accompanied by GIFs. To view these GIFs, simply click &quot;Example&quot;, or alternatively press  <kbd> Alt+🠙</kbd> or  <kbd> Alt+🠛</kbd> to open and close all of them simultaneously.</p>
 <div class="vscode_bullets"><p> <h4> To run a script </h4>  Select the script to be executed and press  <kbd> Ctrl+Enter</kbd>  <div> <details><summary> Example  </summary>
     <p> <img style="width:60%;height:60%;max-width:100%;" src="/julia_book/assets/PAGES/01c_vscode/pics/ex09.gif"/>
     </p></details></div> </p>
 <p> <h4> To format expressions and make them more legible </h4>  Select the script to be formatted and press  <kbd> Ctrl+k</kbd> &#43;  <kbd> Ctrl+f</kbd>. Sometimes, activating this tool requires running it twice. <br/>  <div> <details><summary> Example  </summary>
     <p> <img style="width:60%;height:60%;max-width:100%;" src="/julia_book/assets/PAGES/01c_vscode/pics/ex10.gif"/>
     </p></details></div> </p>
-<p> <h4> To align the equal signs </h4> This requires the VS Code Extension &quot;Better Align&quot;. It aligns consecutive lines by the equal sign and other symbols. It&#39;s implemented by pressing  <kbd> Alt</kbd> &#43;  <kbd> a</kbd>.  <div> <details><summary> Example  </summary>
+<p> <h4> To align equal signs </h4> This feature requires the VS Code Extension &quot;Better Align&quot;. It aligns consecutive lines by using the equal sign and other symbols as a reference. It&#39;s implemented by pressing  <kbd> Alt</kbd> &#43;  <kbd> a</kbd>.  <div> <details><summary> Example  </summary>
     <p> <img style="width:30%;height:30%;max-width:100%;" src="/julia_book/assets/PAGES/01c_vscode/pics/ex11.gif"/>
     </p></details></div></p>
 <p>See also the extension &quot;Cursor Align&quot;, which aligns code by clicking the position on each line.</p>
@@ -2875,7 +2875,7 @@ color: white;
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 6, 2025 
+          © Martin Alfaro <br>Last Modified March 7, 2025 
       </span> 
   </div> 
 </footer>
