--- a/PAGES/02c_scalars/index.html
+++ b/PAGES/02c_scalars/index.html
@@ -2921,7 +2921,7 @@ z &#61; x &gt; y         # same operation &#40;don&#39;t interpreted it as &#39;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Arithmetic Operators</h2></p>
-<p>Numbers can be manipulated through a variety of <strong>arithmetic operators</strong>. These operators are represented by familiar symbols, akin to those commonly found in other programming languages.</p>
+<p>Numbers can be manipulated through a variety of <strong>arithmetic operators</strong>. These operators are represented by symbols akin to those in other programming languages.</p>
 <p>
 <style type="text/css">
 .tg  {border-collapse:collapse;border-spacing:0;}
@@ -2989,7 +2989,7 @@ z &#61; x &gt; y         # same operation &#40;don&#39;t interpreted it as &#39;
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 6, 2025 
+          © Martin Alfaro <br>Last Modified March 7, 2025 
       </span> 
   </div> 
 </footer>
