--- a/PAGES/02f_tuples/index.html
+++ b/PAGES/02f_tuples/index.html
@@ -2821,7 +2821,7 @@ color: white;
 <p>At this point, we&#39;ll only touch on the basics. A more in-depth exploration of tuples will follow in Part II, after we&#39;ve developed the necessary tools to fully appreciate their relevance.</p>
  <div class=warning>  <div class=title>  <span class="warning_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/warning.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b>Warning!</b> </span>  </div>  <div class=content> <strong>Tuples should only be used when the number of elements is small</strong>. Large tuples will result in slow computations at best, or directly trigger fatal errors. For large vectors, you should keep relying on vectors.  </div>  </div>
+      <b>Warning!</b> </span>  </div>  <div class=content> <strong>Tuples should only be used when the collection comprises a small number of elements</strong>. Large tuples will result in slow computations at best, or directly trigger fatal errors. For large vectors, you should keep relying on vectors.  </div>  </div>
 <p>      </div>
     </div>
   </div>
@@ -2907,7 +2907,7 @@ x &#61;  4,5,6           #alternative notation</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 6, 2025 
+          © Martin Alfaro <br>Last Modified March 7, 2025 
       </span> 
   </div> 
 </footer>
