--- a/PAGES/03a_overview/index.html
+++ b/PAGES/03a_overview/index.html
@@ -2816,19 +2816,19 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2></h2></p>
-<p>The upcoming Chapters 3 and 4 cover the core tools of programming: functions, conditional statements, and for-loops. Chapter 3 in particular focuses on <strong>functions</strong>, which are the backbone of Julia. Their use is tightly connected to achieving high performance. Given their importance, we&#39;ll spend a considerable amount of time discussing them.</p>
-<p>The presentation of functions is structured into breaking them down into three:</p>
+<p>The upcoming Chapters 3 and 4 will cover core tools for programming: functions, conditional statements, and for-loops. Chapter 3 in particular focuses on <strong>functions</strong>, which constitute the backbone of Julia programming. Their use is tightly connected to achieving high performance. Given their importance, we&#39;ll spend a considerable amount of time discussing them.</p>
+<p>The presentation of functions is structured into three categories:</p>
 <div class="enumRomanSpace"><ol>
-<li><p>built-in functions &#40;loaded by default&#41;, </p>
+<li><p>built-in functions, </p>
 </li>
 <li><p>third-party functions, and </p>
 </li>
 <li><p>user-defined functions.</p>
 </li>
 </ol></div>
-<p>The first two are made available in the workspace by loading packages &#40;implicitly or explicitly&#41;. This is why the analysis of packages and running functions is tied together in <a href="/julia_book/PAGES/03b_packages/">Section 3b</a>, relegating the subject of user-defined functions to <a href="/julia_book/PAGES/03c_functions/">Section 3c</a>. </p>
-<p>Studying functions also require a crisp understanding of global and local variables. This distinction sets the stage for discussing the view of functions as self-contained mini-programs representing a task. Taking advantage of this, we present both subjects together in <a href="/julia_book/PAGES/03d_scope/">Section 3d</a>. This view of functions encourages good practices regarding their use, which will become more apparent as we apply them in subsequent chapters. For now, it&#39;s enough if you become familiar with this perspective.</p>
-<p>Finally, the concept of broadcasting introduced in <a href="/julia_book/PAGES/03c_functions/">Section 3e</a> is key. I recommend mastering this technique, which allows you to apply the same function to each element in a collection. Its use is widespread in the language. </p>
+<p>The first two types of function are made available in the workspace by loading packages &#40;implicitly or explicitly&#41;. This connection between packages and functions is why we&#39;ll explore the concepts together in <a href="/julia_book/PAGES/03b_packages/">Section 3b</a>, relegating user-defined functions to <a href="/julia_book/PAGES/03c_functions/">Section 3c</a>. </p>
+<p>Studying functions also require a crisp understanding of global and local variables. This distinction sets the stage for discussing the view of functions as self-contained mini-programs representing a task. Taking advantage of this, we present both subjects together in <a href="/julia_book/PAGES/03d_scope/">Section 3d</a>. This interpretation of functions encourages good practices in terms of their use, an aspect that will become more apparent as we move forward in subsequent chapters. At this point, it&#39;ll suffice if you only become familiar with this view of functions.</p>
+<p>Finally, we&#39;ll introduce the concept of broadcasting in <a href="/julia_book/PAGES/03c_functions/">Section 3e</a>. I recommend mastering this technique, which allows you to apply the same function to each element in a collection. Its use is widespread in Julia and other languages. </p>
  <div style="visibility: hidden;margin-bottom:-4em">
 this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible
 this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible
@@ -2860,7 +2860,7 @@ this is invisible this is invisible this is invisible this is invisible this is 
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 6, 2025 
+          © Martin Alfaro <br>Last Modified March 7, 2025 
       </span> 
   </div> 
 </footer>
