--- a/PAGES/04d_forloops/index.html
+++ b/PAGES/04d_forloops/index.html
@@ -2817,7 +2817,7 @@ color: white;
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
 <p>A key feature of programming is its ability to automate repetitive tasks. A standard way to implement this is via <span style="color: rgb(62, 121, 180);"><strong>for-loops</strong></span>. They allow you to execute the same block of code, treating each element of a list as a different input.</p>
-<p>For-loops are delimited with the keywords <code>for</code> and <code>end</code>. To illustrate their syntax more specifically, consider the function <code>println&#40;a&#41;</code>, which evaluates <code>a</code> and displays its output in the REPL. In case <code>a</code> is a string, <code>println&#40;a&#41;</code> will simply display the word stored in <code>a</code>. The following script repeatedly applies <code>println</code> to display each word in a list. </p>
+<p>For-loops are delimited with the keywords <code>for</code> and <code>end</code>. To illustrate their syntax, consider the function <code>println&#40;a&#41;</code>, which evaluates <code>a</code> and displays its output in the REPL. In case <code>a</code> is a string, <code>println&#40;a&#41;</code> will simply display the word stored in <code>a</code>. The following script repeatedly applies <code>println</code> to display each word contained in a collection. </p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2862,7 +2862,7 @@ end</code></pre>
 <p></div></div> 
  </div></div>
 <p>  </p></details></div>
-<p>Furthermore, we can use any term to describe the iteration variable.</p>
+<p>Furthermore, we can employ any character or tem to describe the iteration variable. The example below does it via <code>word</code>.</p>
 <p> <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -3338,7 +3338,7 @@ descriptive&#40;vector,list&#41; &#61; &#91;foo&#40;vector&#41; for foo in list&
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 6, 2025 
+          © Martin Alfaro <br>Last Modified March 7, 2025 
       </span> 
   </div> 
 </footer>
