--- a/PAGES/10d_simd_independence/index.html
+++ b/PAGES/10d_simd_independence/index.html
@@ -2834,8 +2834,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>Broadcasting heavily favors the application of SIMD instructions. In contrast, whether and when for-loops apply SIMD turns out to be more complex. Furthermore, the heuristics of the compiler, while powerful, aren&#39;t without flaws. Indeed, it&#39;s entirely possible that SIMD is implemented when it actually reduces performance or not applied when it would&#39;ve been advantageous. To address this, Julia provides the <code>@simd</code> macro to manually implement SIMD, giving developers a more granular control over the optimization process. </p>
-<p>Effective application of SIMD requires identifying the conditions under which it can be applied. Failing to meet these criteria can render SIMD infeasible or require code adaptations that slow down computation. Specifically, the ideal conditions for leveraging SIMD instructions are:</p>
+<p>Broadcasting heavily favors the application of SIMD instructions. In contrast, whether and when for-loops apply SIMD is more complex. Furthermore, the heuristics of the compiler, while powerful, aren&#39;t without flaws. Indeed, it&#39;s entirely possible that SIMD is implemented when it actually reduces performance or not applied when it would&#39;ve been advantageous. To address this, Julia provides the <code>@simd</code> macro to manually implement SIMD, giving developers a more granular control over the optimization process. </p>
+<p>An effective application of SIMD requires identifying the conditions under which this optimization can be applied. Failing to meet these criteria can render SIMD infeasible or necessitate code adaptations that end up slowing down computation. The ideal conditions for leveraging SIMD instructions are:</p>
 <ul>
 <li><p><strong>Independence of Iterations</strong>: Except for reductions, which are specifically handled to ensure their feasibility.</p>
 </li>
@@ -3042,7 +3042,7 @@ end</code></pre> </div></div>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 6, 2025 
+          © Martin Alfaro <br>Last Modified March 7, 2025 
       </span> 
   </div> 
 </footer>
