--- a/PAGES/01a_installation/index.html
+++ b/PAGES/01a_installation/index.html
@@ -2816,7 +2816,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>In the upcoming sections, we&#39;ll cover the essential steps to install Julia and VS Code. The latter is a code editor that enables you to write and execute code in multiple languages, visualize results, and leverage extensions that simplify the coding experience. We&#39;ll additionally provide some valuable online resources for Julia&#39;s users.</p>
+<p>Next, we&#39;ll cover the essential steps to install Julia and VS Code. The latter is a code editor to write and execute code in multiple languages, visualize results, and leverage extensions that simplify the coding experience. We&#39;ll conclude by providing some valuable online resources for Julia&#39;s users.</p>
 <p>      </div>
     </div>
   </div>
@@ -2900,7 +2900,7 @@ this is invisible this is invisible this is invisible this is invisible this is 
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 6, 2025 
+          © Martin Alfaro <br>Last Modified March 7, 2025 
       </span> 
   </div> 
 </footer>
