--- a/PAGES/02e_arrays/index.html
+++ b/PAGES/02e_arrays/index.html
@@ -2816,8 +2816,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>So far, we&#39;ve explored variables representing single-element objects. Now, we&#39;ll shift our focus to <span style="color: rgb(62, 121, 180);"><strong>collections</strong></span>, defined as <strong>variables comprising multiple elements</strong>.</p>
-<p>Julia provides several forms of collections, including:</p>
+<p>So far, we&#39;ve explored variables representing single-element objects. Now, we&#39;ll shift our focus to <span style="color: rgb(62, 121, 180);"><strong>collections</strong></span>, defined as <strong>variables comprising multiple elements</strong>. Julia provides several forms of collections, including:</p>
 <ul>
 <li><p>Arrays &#40;including vectors and matrices&#41;</p>
 </li>
@@ -2829,7 +2828,7 @@ color: white;
 </li>
 </ul>
 <p><span style="color: rgb(62, 121, 180);"><strong>Arrays</strong></span> represent one of the most common data structure for collections. They are formally defined as objects with type <code>Array&#123;T,d&#125;</code>, where <code>d</code> is the array&#39;s dimension and <code>T</code> is its elements&#39; type &#40;e.g., <code>Int64</code> or <code>Float64</code>&#41;.</p>
-<p>Two special types of arrays are <span style="color: rgb(62, 121, 180);"><strong>vectors</strong></span> &#40;1-dimensional arrays&#41; and <span style="color: rgb(62, 121, 180);"><strong>matrices</strong></span> &#40;2-dimensional arrays&#41;. Specifically, the type <code>Vector&#123;T&#125;</code> is an alias for <code>Array&#123;T,1&#125;</code>, whereas <code>Matrix&#123;T&#125;</code> is an alias for <code>Array&#123;T,2&#125;</code>. Although we include a section about matrices, this is optional—our content concentrates almost exclusively on vectors, which are sufficient for explaining Julia&#39;s fundamentals.</p>
+<p>Two special types of arrays are <span style="color: rgb(62, 121, 180);"><strong>vectors</strong></span> &#40;1-dimensional arrays&#41; and <span style="color: rgb(62, 121, 180);"><strong>matrices</strong></span> &#40;2-dimensional arrays&#41;. Specifically, the type <code>Vector&#123;T&#125;</code> is an alias for <code>Array&#123;T,1&#125;</code>, whereas <code>Matrix&#123;T&#125;</code> is an alias for <code>Array&#123;T,2&#125;</code>. We include a section about matrices, although this is optional since our website will concentrate almost exclusively on vectors, which are sufficient for explaining Julia&#39;s fundamentals.</p>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
       <b> Remark</b> </span>  </div>  <div class=content> <strong>Julia uses 1 as an array's first index</strong>. This contrasts with many other languages &#40;e.g., Python&#41;, where 0 is used as the first index.  </div>  </div>
@@ -2846,7 +2845,7 @@ color: white;
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
-    <button class="tablink first_tab active" data-id=""> Arrays </button>    
+    <button class="tablink first_tab active" data-id=""> Arrays </button>
 </div><div data-id="" class="tabcontent active">
 <div class="code_in_modal"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x &#61; &#91;1, 2, 3&#93;          #&#61; column-vector &#40;defined using commas or semicolons&#41;
@@ -2935,11 +2934,11 @@ x &#61; &#91;1; 2; 3&#93;          # equivalent notation to define &#96;x&#96;</
     </div>
   </div>
 </section>
-<section id="matrices_optional" class="scrollspy">
+<section id="matrices_i_stylecolorredoptional" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
-        <h2>Matrices (<strong><i>OPTIONAL</i></strong>)</h2></p>
+        <h2>Matrices (<strong><i style="color:red">OPTIONAL</i></strong>)</h2></p>
 <p><strong>Matrices</strong> can be defined as collections of row- or column-vectors. If they&#39;re created through multiple row vectors, each row has to be separated by a semicolon <code>;</code>. If we instead adopt multiple column vectors, their elements need to be separated by a space. </p>
 <p>Note that row vectors are considered as special cases of matrices, with their elements separated by a space—they&#39;re matrices with multiple columns having one element. </p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
@@ -3033,7 +3032,7 @@ Y &#61; &#91;4 5 6&#93;     # row-vector</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 6, 2025 
+          © Martin Alfaro <br>Last Modified March 7, 2025 
       </span> 
   </div> 
 </footer>
@@ -3645,7 +3644,7 @@ for multiple pics in a row
         </li>
         
         <li>
-          <a href="#matrices_optional" data-offset="-40">Matrices (<strong><i>OPTIONAL</i></strong>)</a>
+          <a href="#matrices_i_stylecolorredoptional" data-offset="-40">Matrices (<strong><i style="color:red">OPTIONAL</i></strong>)</a>
         </li>
         
       </ul>
