--- a/PAGES/03b_packages/index.html
+++ b/PAGES/03b_packages/index.html
@@ -2825,7 +2825,7 @@ color: white;
 <li><p>user-defined functions.</p>
 </li>
 </ol></div>
-<p><strong>This section focuses on i) and ii)</strong>, relegating iii&#41; to the next section. We consider in particular how to call functions, which in turn takes us to the discussion of packages. </p>
+<p><strong>This section focuses on i) and ii)</strong>, relegating iii&#41; to the next section. We consider in particular how to call functions, which in turn leads into discussing packages. </p>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px; padding-right:0.4em;"><strong>Notation for Functions</strong>  </span>  </div>  <div class=content>     Julia&#39;s developers suggest a <strong>snake-case</strong> format for function names. This consists of lowercase letters, numbers, and possibly underscores to separate words &#40;e.g., <code>snake_case123</code>&#41;. Note that this is only a convention, not a language&#39;s requirement.  </div>  </div>
 <p>      </div>
@@ -2849,8 +2849,9 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Loading Packages and Calling Functions</h2></p>
-<p>The concept of packages is tightly related to modules. Formally, <span style="color: rgb(62, 121, 180);"><strong>modules</strong></span> are independent blocks of code, each acting as a separate workspace, that export a defined set of functions. When you run Julia, you&#39;re in fact writing your script in a module called <code>Main</code>. </p>
-<p><span style="color: rgb(62, 121, 180);"><strong>Packages</strong></span> are a special types of modules that additionally include information about their <strong>dependencies</strong>. They&#39;re defined as the necessary packages that must be load to run the package itself. Getting access to a package&#39;s functions requires loading the package via either the keyword <code>import</code> or <code>using</code>. The choice determines how functions are eventually called in your code. If the package is laoded via <code>import</code>, the function&#39;s name must include a prefix that identifies the package&#39;s name. On the contrary, no prefix is needed when the package is loaded via <code>using</code>.</p>
+<p>The concept of packages is tightly related to modules. Formally, <span style="color: rgb(62, 121, 180);"><strong>modules</strong></span> are independent blocks of code, each acting as a separate workspace, that export a defined set of functions. In fact, when you start Julia, you&#39;re implicitly writing your script in a module called <code>Main</code>. </p>
+<p><span style="color: rgb(62, 121, 180);"><strong>Packages</strong></span> are a special types of modules, which additionally include information about their <strong>dependencies</strong>. Dependencies are defined as the necessary packages that must be load to run the package itself. </p>
+<p>Getting access to a package&#39;s functions requires loading the package via either the keyword <code>import</code> or <code>using</code>. The difference between the two is how functions are eventually called in your code. If the package is loaded via <code>import</code>, the function&#39;s name must include a prefix with the package&#39;s name. On the contrary, no prefix is needed when the package is loaded via <code>using</code>.</p>
 <p>Below, we demonstrate each approach by calling the function <code>mean</code> from the package <code>Statistics</code>. This package isn&#39;t loaded by default, but it comes pre-installed with Julia.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
@@ -2883,7 +2884,7 @@ mean&#40;x&#41;</code></pre>
       <div class="col-lg- mx-auto">
         <h2>Built-in Functions</h2></p>
 <p>Julia&#39;s built-in functions are contained in two packages known as <code>Core</code> and <code>Base</code>. Both are automatically loaded in every Julia session, with theirr functions accessible as if we had executed <code>using Core</code> and <code>using Base</code>. This determines that that their functions don&#39;t require a prefix to be called. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> Some built-in functions may require a prefix. For instance, this is what occurs with the function called <code>isgreater</code>, which must be called via <code>Base.isgreater</code>. Furthermore, some submodules are also loaded by default. For instance, the function <code>Base.Iterators.accumulate</code> is part of the submodule <code>Iterators</code> from <code>Base</code>. As <code>Base</code> is loaded via <code>using</code> in every session, you can directly call this function using <code>Iterators.accumulate</code>.  </span></span> </p>
-<p>Among built-in mathematical functions, the syntax of the most common ones is as follows.</p>
+<p>Among mathematical functions, the syntax of the most common ones is as follows.</p>
 <p>
 <style type="text/css">
 .tg  {border-collapse:collapse;border-spacing:0;}
@@ -2961,8 +2962,8 @@ mean&#40;x&#41;</code></pre>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Why Using "Import" if It's More Verbose?</h2></p>
-<p>When a function&#39;s name is shared across multiple packages, at least one of the packages must be loaded using <code>import</code> to avoid naming conflicts. For instance, suppose we need the package <code>Statistics</code> and another one called <code>MyPackage</code>. If the latter contains a function called <code>mean</code>, Julia will throw an error when <code>mean</code> is called unless you load one of the packages with <code>import</code>. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> Adding a function with the same name as another package isn&#39;t necessarily a neglect from developers. For example, <code>mean</code> in <code>MyPackage</code> could be computing averages through an alternative algorithm to the one employed in <code>Statistics</code>.  </span></span></p>
-<p>Using <code>import</code> not only avoids the clash of names, but also helps reduce ambiguity in the meaning of a function. For instance, consider a script making use of the function <code>rank</code>. This name could reference a wide range concepts, depending on the context &#40;e.g., the rank of a matrix, the order in a list&#41;. Indicating the package of <code>rank</code> when the function is called can clarify its intended meaning.</p>
+<p>When a function&#39;s name is shared across multiple packages, at least one of the packages must be loaded via <code>import</code> to avoid naming conflicts. For instance, consider the package <code>Statistics</code> and another one called <code>MyPackage</code>. If the latter contains a function called <code>mean</code>, Julia will throw an error unless you load one of the packages via <code>import</code>. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> Defining a function with the same name as another package isn&#39;t necessarily a neglect from developers. For example, <code>mean</code> in <code>MyPackage</code> could be computing averages through an alternative algorithm, more efficient in certain applications.  </span></span></p>
+<p>Using <code>import</code> not only avoids naming conflicts, but also helps reduce ambiguity in the meaning of a function. For instance, consider a function called <code>rank</code>. This name could reference a wide range concepts, depending on the context &#40;e.g., the rank of a matrix, the order in a list&#41;. Explicitly indicating the package of <code>rank</code> when the function is called can shed light on its intended meaning.</p>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
       <b> Remark</b> </span>  </div>  <div class=content> <code>import</code> is also useful if you have custom functions that are widely applied across your projects. For example, consider a function called <code>table_in_pdf</code>, which exports Julia tables to a PDF with some predefined format. While the name of the function makes it clear what it&#39;s doing, a user could wonder if this function comes from a standard package. You could hint that this isn&#39;t the case, by placing the function in a package called <code>userDefined</code>. In this way, you can load the package using <code>import UserDefined</code>, and then calling the function via <code>UserDefined.table_in_pdf</code>.  </div>  </div>
@@ -2970,11 +2971,11 @@ mean&#40;x&#41;</code></pre>
     </div>
   </div>
 </section>
-<section id="approaches_for_loading_packages_and_calling_functions" class="scrollspy">
+<section id="approaches_to_loading_packages_and_calling_functions" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
-        <h2>Approaches for Loading Packages and Calling Functions</h2></p>
+        <h2>Approaches to Loading Packages and Calling Functions</h2></p>
 <p>The features we&#39;ve covered are probably all you need to use packages in Julia. However, there are some additional features worth mentioning. </p>
 <p>First, users can load only a subset of functions from a package. This possibility is particularly relevant for heavy packages, which may take a significant time to fully load. For instance, if we only need the function <code>mean</code> from <code>Statistics</code>, the following two approaches achieve the same result.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
@@ -2998,8 +2999,8 @@ mean&#40;x&#41;</code></pre>
 <p></div></div> 
  </div></div>
 <p>  </p></details></div>
-<p>Note that this approach deems it unnecessary to add the package&#39;s name as a prefix, even when we load a package via <code>import</code>.</p>
-<p>You can also assign custom names to packages or functions. This is particularly useful for lengthy names. Below, we demonstrate the implementation with the keyword <code>import</code>, which is equivalent to the approach with <code>using</code>.</p>
+<p>Note that this approach deems it unnecessary to add the package&#39;s name as a prefix, even when the package is loaded via <code>import</code>.</p>
+<p>Furthermore, you can assign custom names to packages or functions, which is particularly useful for substituting lengthy names. Below, we demonstrate the implementation of this feature. </p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -3034,8 +3035,8 @@ average&#40;x&#41;</code></pre>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Macros</h2></p>
-<p>Macros are ubiquitous in Julia. They enable the automation of tasks that, otherwise, would be tedious and time-consuming to perform. On this website, we&#39;ll only cover how to apply macros, without exploring how they can be defined. The reason is that defining macros requires knowledge of Julia&#39;s metaprogramming capabilities, which would demand a substantial work. </p>
-<p>The usefulness of macros may not be immediately clear at this point. Hopefully, many of your questions will be cleared up once we applied them in later sections.</p>
+<p>Macros are ubiquitous in Julia. They enable the automation of tasks that otherwise would be tedious and time-consuming to perform. On this website, we&#39;ll only cover how to apply macros, without exploring approaches to defining them. The reason is that creating macros requires knowledge of Julia&#39;s metaprogramming capabilities, whose explanation would demand introducing many preliminary concepts. </p>
+<p>The usefulness of macros may not be immediately clear at this point. Hopefully, many of your questions will be cleared up once we start apply them in later sections.</p>
 <p> <h4> Applying Macros </h4><div class="own-anchors"><a name="macros"></a></div></p>
 <p>Macros and functions share similarities, as both perform operations on an input. Their main difference is that macros pass statements as their argument, while functions instead take variables as inputs. Another difference is that macros may return a statement as its output, which isn&#39;t possible with functions.</p>
 <p>Formally, macro are denoted by prefixing the symbol <code>@</code> to their name. They can take a whole expression like <code>x &#61; some_function&#40;y&#41;</code> as its argument, possibly modifying <code>x</code>, <code>&#61;</code>, and <code>some_function&#40;y&#41;</code>. In fact, macros can even add lines of code to the expression. Eventually, macros return a modified expression as their result.</p>
@@ -3048,13 +3049,13 @@ average&#40;x&#41;</code></pre>
 <div class="code_in_modal"><div class="code_NoFormat"></p>
 <pre><code class="language-julia"># both are equivalent
    z .&#61; foo.&#40;x .&#43; y&#41;
-@. z  &#61; foo&#40;x  &#43; y&#41;          # @. adds . to &#96;foo&#96;, &#96;&#61;&#96;, and &#96;&#43;&#96;</code></pre>
+@. z  &#61; foo&#40;x  &#43; y&#41;          # @. adds . to &#39;foo&#39;, &#39;&#61;&#39;, and &#39;&#43;&#39;</code></pre>
 <p></div></div> 
  </div></div>
 <p>  </p></details></div>
  <div class=warning>  <div class=title>  <span class="warning_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/warning.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b>Warning!</b> </span>  </div>  <div class=content>     Using macros requires extreme caution, as they could act as black boxes and hence lead to unexpected behaviors. In fact, macros tend to be a common source of bugs. If you apply a macro, make sure you understand which part of the expression is modified and how.  </div>  </div>
+      <b>Warning!</b> </span>  </div>  <div class=content>     Applying macros requires extreme caution, as they could act as black boxes and hence lead to unexpected behaviors. In fact, macros tend to be a common source of bugs. Make sure you understand which part of the expression is modified by a macro and how.  </div>  </div>
 <p>      </div>
     </div>
   </div>
@@ -3701,7 +3702,7 @@ for multiple pics in a row
         </li>
         
         <li>
-          <a href="#approaches_for_loading_packages_and_calling_functions" data-offset="-40">Approaches for Loading Packages and Calling Functions</a>
+          <a href="#approaches_to_loading_packages_and_calling_functions" data-offset="-40">Approaches to Loading Packages and Calling Functions</a>
         </li>
         
         <li>
